--- a/templates/ajaxlistre.html
+++ b/templates/ajaxlistre.html
@@ -5,10 +5,10 @@
 {% if request.user.is_authenticated %}
 {% if not request.user in i.favoritos.all %}					            				<!-- añadir a favoritos -->
 
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formfav{{i.id}}" method='POST'data-url="/waomovies/favorito/{{i.id}}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formfav{{i.id}}" method='POST'data-url="/favorito/{{i.id}}/">{% csrf_token %}
 					            				<button  onclick="myFunctionfav(this)" id="fav{{i.id}}"title="Favoritos" class="" style="background: none; border: none; cursor: pointer;" type="submit"><i class="fa fa-heart-o" aria-hidden="true" style="color: rgba(199, 0, 57, 1); font-size: 20px;"></i></button>
 					            				</form>
-					            				<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formafav{{i.id}}" method='POST'data-url="/waomovies/eliminar_favorito/{{i.id}}/">{% csrf_token %}
+					            				<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formafav{{i.id}}" method='POST'data-url="/eliminar_favorito/{{i.id}}/">{% csrf_token %}
 					            				<button  onclick="myFunctionfa2(this)" id="afav{{i.id}}"title="Favoritos" class="" style="background: none; border: none; cursor: pointer; display: none;" type="submit"><i class="fa fa-heart" aria-hidden="true" style="color: rgba(199, 0, 57, 1); font-size: 20px;"></i></button>
 					            				</form>
 					            				<script>
@@ -96,10 +96,10 @@
 
 
 
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formsfav{{i.id}}" method='POST'data-url="/waomovies/eliminar_favorito/{{i.id}}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formsfav{{i.id}}" method='POST'data-url="/eliminar_favorito/{{i.id}}/">{% csrf_token %}
 					            				<button  onclick="myFunctionfavs(this)" id="sfav{{i.id}}"title="Favoritos" class="" style="background: none; border: none; cursor: pointer; " type="submit"><i class="fa fa-heart" aria-hidden="true" style="color: rgba(199, 0, 57, 1); font-size: 20px;"></i></button>
 					            				</form>
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formfav{{i.id}}" method='POST'data-url="/waomovies/favorito/{{i.id}}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-formfav{{i.id}}" method='POST'data-url="/favorito/{{i.id}}/">{% csrf_token %}
 					            				<button  onclick="myFunctionfavs2(this)" id="fav{{i.id}}"title="Favoritos" class="" style="display: none; background: none; border: none; cursor: pointer;" type="submit"><i class="fa fa-heart-o" aria-hidden="true" style="color: rgba(199, 0, 57, 1); font-size: 20px;"></i></button>
 					            				</form>
 					            				<script>
@@ -207,11 +207,11 @@
 
 {% if not i in peliculasa %}	
 					            				<!-- ver más tarde -->
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-form{{i.id}}" method='POST'data-url="/waomovies/vermastarde/{{ i.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-form{{i.id}}" method='POST'data-url="/vermastarde/{{ i.id }}/">{% csrf_token %}
 					            				<button onclick="myFunction(this)" id="{{i.id}}"  title="Ver más tarde" class="" style="background: none; border: none; cursor: pointer; " type="submit" style=""><i   style="color: rgba(255, 255, 255, 0.9);  position: relative; right: 7px;  font-size: 20px;" class="fa fa-eye-slash" aria-hidden="true"></i></button>
 					            				
 					            				</form>
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-forms{{ i.id }}" method='POST'data-url="/waomovies/eliminar_vermastarde/{{ i.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-forms{{ i.id }}" method='POST'data-url="/eliminar_vermastarde/{{ i.id }}/">{% csrf_token %}
 					            				<button name="eye" style="background: none; border: none; cursor: pointer; display: none;"id="s{{ i.id }}"onclick="myFunction2(this)" title="Ver más tarde" class="example" type="submit"><i  style="color: rgba(255, 255, 255, 0.9); position: relative; right: 7px;   font-size: 20px;" class="fa fa-eye" aria-hidden="true"></i></button>
 					            			</form>
 					            				<!-- termina ver más tarde -->
@@ -310,11 +310,11 @@
 {% else %}
 
 		<!-- ver más tarde -->
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-forms{{i.id}}" method='POST'data-url="/waomovies/eliminar_vermastarde/{{ i.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-forms{{i.id}}" method='POST'data-url="/eliminar_vermastarde/{{ i.id }}/">{% csrf_token %}
 					            				<button onclick="myFunction2(this)" id="s{{ i.id }}"  title="Ver más tarde" class="" style="background: none; border: none; cursor: pointer; " type="submit" style=""><i   style="color: rgba(255, 255, 255, 0.9); position: relative; right: 7px;  font-size: 20px; " class="fa fa-eye" aria-hidden="true"></i></button>
 					            				
 					            				</form>
-<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-form{{ i.id }}" method='POST'data-url="/waomovies/vermastarde/{{ i.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative;  padding: 0px;" class="my-ajax-form{{ i.id }}" method='POST'data-url="/vermastarde/{{ i.id }}/">{% csrf_token %}
 					            				<button name="eye" style="background: none; border: none; cursor: pointer; display: none;"id="{{ i.id }}"onclick="myFunction(this)" title="Ver más tarde" class="example" type="submit"><i  style="color: rgba(255, 255, 255, 0.9); position: relative; right: 7px;  font-size: 20px; " class="fa fa-eye-slash" aria-hidden="true"></i></button>
 					            			</form>
 					            				<!-- termina ver más tarde -->
