--- a/templates/password_reset_form.html
+++ b/templates/password_reset_form.html
@@ -142,7 +142,7 @@ img.emoji {
 										<nav id="header-navigation" class="header-standard-position">
 													<div class="sh-nav-container"><ul id="menu-header-navigation" class="sh-nav"><li id="menu-item-12" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-12"><a href="#">Facebook</a></li>
 <li id="menu-item-13" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-13"><a href="#">Instagram</a></li>
-<li id="menu-item-14" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14"><a href="/waomovies/inicio/">Waomovies</a></li>
+<li id="menu-item-14" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14"><a href="/inicio/">Waomovies</a></li>
 </ul></div>											</nav>
 
 				</div>
@@ -156,7 +156,7 @@ img.emoji {
 			<div class="line-test">
 				<div class="container">
 
-					<form method="get" class="sh-header-search-form" action="/waomovies/auth/">
+					<form method="get" class="sh-header-search-form" action="/auth/">
 						<input type="search" class="sh-header-search-input" placeholder="Search Here.." value="" name="s" required="">
 						<button type="submit" class="sh-header-search-submit">
 							<i class="icon-magnifier"></i>
